--- a/templates/show_excel.html
+++ b/templates/show_excel.html
@@ -2,25 +2,22 @@
 <html>
 <head>
     <title>Select Sheet</title>
-    <!-- Loading Spread JS Scripts -->
-    <script src="static/spreadjs\scripts\gc.spread.sheets.all.18.2.3.min.js" type="text/javascript"></script>
-    <script src="static/spreadjs\scripts\gc.spread.excelio.18.2.3.min.js" type="text/javascript"></script>
-    <!-- Loading SpreadJS CSS -->
-    <link
-        href="static/spreadjs\css\gc.spread.sheets.excel2016colorful.18.2.3.css"
-        rel="stylesheet"
-        type="text/css"
-    /> 
+    <!-- Your styles -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+    <!-- Custom JS script -->
+    <script src="static/js/show_excel.js" type="text/javascript"></script>
+    <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
+
 </head>
 
 <body>
     <!-- Header with sheet selector -->
-    <header style="height: 30vh;">
-        <h2>Showing sheet: {{ sheet_name }}</h2>
+    <header style="height: 15vh;">
+        <h2 id="current-sheet-title">Showing sheet: </h2>
+
         <div class="toolbar">
             <form id="sheetForm" action="/show_sheet" method="get">
-                <select name="sheet">
+                <select name="sheet" id="sheet-select">
                     {% for sheet in sheets %}
                         <option value="{{ sheet }}">{{ sheet }}</option>
                     {% endfor %}
@@ -28,34 +25,48 @@
                 <button type="submit">Show Sheet</button>
             </form>
         </div>
+
+        <form id="check-sheet-grammar">
+            <input type="submit" value="Check Grammar"/>
+        </form>
     </header>
-    
-    <!-- Show excel file -->
-    <!-- <div id="ss" style="position: absolute; top: 1000; left: 0; right: 0; bottom: -500;"></div> -->
-    <!-- <div id="ss" style="width: 50%; height: 0%;"></div> -->
-    <!-- <div id="ss" style="width: 80%; height: 100vh; float: left; border: 1px solid #ccc;"></div> -->
-     
-    <div id="ss"></div>
+
+    <!-- Excel container -->
+    <div class="content-container">
+        <div id="ss" style="width:100%; height:80vh;">
+            {{ iframe | safe }}
+        </div>
 
 
-    <!-- <div id="ss"></div> -->
+        <!-- Error panel -->
+        <div id="error-panel">
+            <h3>Found spelling </h3>
+            <ul id="error-list"></ul>
+        </div>
+    </div>
+
     <script>
-        // Initialize SpreadJS in the container
-        var spread = new GC.Spread.Sheets.Workbook(document.getElementById("ss"));
-        var excelIo = new GC.Spread.Excel.IO();
+        let sheetSelect = document.getElementById("sheet-select");
 
-        fetch("/download_excel")
-            .then(res => res.arrayBuffer())
-            .then(data => {
-                excelIo.open(data, function (json) {
-                spread.fromJSON(json);
-                spread.setActiveSheet("{{ sheet_name }}");
-                }, function (err) {
-                alert("Error loading Excel: " + err);
-                });
-            });
-        
+        // From backend (Django/Jinja2 will replace with actual value or empty string)
+        let current_sheet_name = "{{ current_sheet_name | default('') }}";
+        let correction_results = {{ correction_results | default([]) | tojson | safe }};
+
+        // Update error list from database
+        updateGrammarPanel(correction_results)
+        console.log("Iframe {{iframe}}")
+        console.log("HIHIHI")
+        if (current_sheet_name) {
+            // If backend passed a valid sheet name
+            sheetSelect.value = current_sheet_name;
+            
+            requestCheckSheetGrammar("check-sheet-grammar", current_sheet_name);
+        } else {
+            // Else: optionally set to first option or leave blank
+            if (sheetSelect.options.length > 0) {
+                sheetSelect.value = sheetSelect.options[0].value;
+            }
+        }
     </script>
 </body>
 </html>
-
